Initial commit: added JWT filters and other configurations